@@ -7,6 +7,10 @@
     \item read.450k.exp has support for argument base when targets is
     supplied.  Thanks to Brent Pedersen <bpederse@gmail.com> for noticing
     this and providing an initial fix.
+    \item changed the default behaviour of read.450k.exp.  If called
+    using a targets argument created by read.450k.sheet, you should not
+    also give it a base argument (which was always superfluous).
+    \item Some NAMESPACE imports fixes.
   }
 }
 
